# Journalmaintool

./: .env.example  .gitignore  AGENT_ONBOARDING.md  ANALYSIS_REBUILD_MD.md  CORRECTED_REBUILD.md  INKOMPATIBILITAETEN.md  KNOWLEDGE.md  PROJEKTPLAN.md  README.md  STRIPE_SETUP.md  THREE_JS_INTEGRATION_ANALYSIS.md  TOOL_COMPATIBILITY_ANALYSIS.md  docker-compose.yml  test_api.ps1
.augment/rules/: api-tester.md  frontend-developer.md  infrastructure-maintainer.md  ui-designer.md
.superdesign/design_iterations/: trading_dashboard_canvas_2.html  trading_dashboard_theme.css
Instructions/: AGENT_VIBECODE_COMPLETE_REBUILD.md  price_action_talk_3_d_login_register_one_pager_single_html (1).html  trading_dashboard_canvas_1.html
backend/: .env.example  Cargo.toml
backend/migrations/: 20250107_001_create_users.sql  20250107_002_create_trades.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
backend/src/auth/: jwt.rs  mod.rs
backend/src/handlers/: analytics.rs  auth.rs  mod.rs  subscription.rs  trade.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  subscription.rs  trade.rs  user.rs
backend/src/repositories/: mod.rs  trade_repository.rs  user_repository.rs
backend/src/services/: analytics_service.rs  mod.rs  stripe_service.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: app.css
frontend/src/lib/api/: client.ts  trades.ts
frontend/src/lib/stores/: auth.ts
frontend/src/routes/: +page.svelte  landing_mit_3D
frontend/src/routes/dashboard/: +page.svelte
frontend/static/: SVGS
(+5 files in other folders)
